trying to get user input for name

--- a/project1/index.html
+++ b/project1/index.html
@@ -3,10 +3,29 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles/main.scss">
-    <title></title>
+    <title>Trivia Game</title>
   </head>
   <body>
+<div>
+  <!-- <input type="text" id="mytext"> -->
+  <!-- <input type="text" name="enter" class="enter" value="" id="getname"/>
+   <input type="button" value="click" OnClick="kk()"/> -->
+   <form>
+       <div>
+           <label for="playerone">Player 1 Name:</label>
+           <input type="text" id="playerOneName" />
+       </div>
+       <div>
+           <label for="playertwo">Player 2 Name:</label>
+           <input type="text" id="playerTwoName" />
+       </div>
+       <div class="button">
+           <button type="submit" id="submitbutton">Submit</button>
+       </div>
+   </form>
 
+
+</div>
 
 
     <!-- SCRIPTS BELOW -->
