input for get name is working huzzah

--- a/project1/index.html
+++ b/project1/index.html
@@ -6,11 +6,9 @@
     <title>Trivia Game</title>
   </head>
   <body>
-<div>
-  <!-- <input type="text" id="mytext"> -->
-  <!-- <input type="text" name="enter" class="enter" value="" id="getname"/>
-   <input type="button" value="click" OnClick="kk()"/> -->
-   <form>
+
+
+   <form id=nameForm>
        <div>
            <label for="playerone">Player 1 Name:</label>
            <input type="text" id="playerOneName" />
@@ -20,12 +18,10 @@
            <input type="text" id="playerTwoName" />
        </div>
        <div class="button">
-           <button type="submit" id="submitbutton">Submit</button>
+           <button type="button" id="submitbutton">Submit</button>
        </div>
    </form>
 
-
-</div>
 
 
     <!-- SCRIPTS BELOW -->
