added listener for space button

--- a/project1/index.html
+++ b/project1/index.html
@@ -6,9 +6,7 @@
     <title>Trivia Game</title>
   </head>
   <body>
-
-
-   <form id=nameForm>
+   <form id='nameForm'>
        <div>
            <label for="playerone">Player 1 Name:</label>
            <input type="text" id="playerOneName" />
@@ -21,8 +19,10 @@
            <button type="button" id="submitbutton">Submit</button>
        </div>
    </form>
-
-
+<div id='playspace'>
+</div>
+<div id='scores'>
+</div>
 
     <!-- SCRIPTS BELOW -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
