--- a/project1/index.html
+++ b/project1/index.html
@@ -26,6 +26,7 @@
 
 <div id='scores'>
 </div>
+<div id="countdown"></div>
 
     <!-- SCRIPTS BELOW -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
