all questions and answers loaded

--- a/project1/index.html
+++ b/project1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles/main.scss">
-    <title>Trivia Game</title>
+    <title>Britney Lyric Trivia</title>
   </head>
   <body>
    <form id='nameForm'>
