--- a/project1/index.html
+++ b/project1/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
    <form id='nameForm'>
+     <h1>Britney Lyric Trivia</h1>
        <div>
            <label for="playerone">Player 1 Name:</label>
            <input type="text" id="playerOneName" />
