fixed padding on skip button

--- a/project1/index.html
+++ b/project1/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="styles/main.scss">
+    <link rel="stylesheet" href="styles/main.css">
     <title>Britney Lyric Trivia</title>
   </head>
   <body>
