--- a/project1/index.html
+++ b/project1/index.html
@@ -27,7 +27,7 @@
 
 <div id='scores'>
 </div>
-<div id="countdown"></div>
+<div id="countdown">Timer</div>
 
     <!-- SCRIPTS BELOW -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
