--- a/atoz/index.html
+++ b/atoz/index.html
@@ -8,7 +8,7 @@
     <script src="app.js"></script>
   </head>
   <body>
-    <div class="backgrounds background_one">
+    <div class="backgrounds background_1">
       <div class="empty"></div>
       <div class="content">
         <div class="box left">
@@ -23,7 +23,7 @@
       </div>
     </div>
 
-    <div class="backgrounds background_two">
+    <div class="backgrounds background_2">
       <div class="empty"></div>
       <div class="content">
         <div class="box center">
@@ -53,7 +53,7 @@
       </div>
     </div>
 
-    <div class="backgrounds background_three">
+    <div class="backgrounds background_3">
       <div class="empty"></div>
       <div class="content">
         <div class="box left">
@@ -68,7 +68,7 @@
       </div>
     </div>
 
-    <div class="backgrounds background_four">
+    <div class="backgrounds background_4">
       <div class="empty"></div>
       <div class="content">
         <div class="box center">
@@ -95,6 +95,49 @@
           <br>
           <br>CRISPY CATFISH A LA BIG JONES
           <br>Crispy catfish in a light corn and rice flour breading, served with creamy grits, butterbeans, tasso Beurre monte, piccalilli
+        </div>
+      </div>
+    </div>
+
+    <div class="extra">
+      <h1>Our very first guest!</h1>
+    </div>
+
+    <div class="backgrounds background_5">
+      <div class="empty"></div>
+    </div>
+
+    <div class="backgrounds background_6">
+      <div class="empty"></div>
+      <div class="content">
+        <div class="box left">
+          <span><h1>C is for</h1></span>
+        </div>
+        <div class="box right">
+          <span>
+            <h1>Campagnola</h1>
+            12.01.16
+          </span>
+        </div>
+      </div>
+    </div>
+
+    <div class="backgrounds background_7">
+      <div class="empty"></div>
+      <div class="content">
+        <div class="box center">
+          <h1>MENU</h1>
+          Pinot Noir, Paraiso. Monterey, CA.
+          <br>Chianti Classico Riserva, Sparviero. Toscana, Italy.
+          <br>
+          <br>BUTTERNUT SQUASH SOUP
+          <br>maple mascarpone
+          <br>
+          <br>PENNE
+          <br>buffalo mozzarella, tomato, cream, Calabrian chili
+          <br>
+          <br>ORECCHIETTE
+          <br>fennel sausage, rapini pesto, ricotta salata
         </div>
       </div>
     </div>
